# llm-agent-interview-lab

./: .gitignore  README.md  pyproject.toml
.github/workflows/: android-apk.yml  pages.yml
apps/flutter_agent_interview/: README.md  pubspec.yaml
apps/flutter_agent_interview/android/: gradle.properties
apps/flutter_agent_interview/android/app/: build.gradle.kts
apps/flutter_agent_interview/android/app/src/main/: AndroidManifest.xml
apps/flutter_agent_interview/android/app/src/main/kotlin/com/cuizihao/agentinterview/flutter_agent_interview/: MainActivity.kt
apps/flutter_agent_interview/assets/: knowledge_base.json
apps/flutter_agent_interview/lib/: main.dart
apps/flutter_agent_interview/test/: widget_test.dart
configs/: memory.yaml  rag.yaml
docs/: 01-memory-mechanism.md  02-rag-vector-data-engineering.md  03-long-context-vs-rag.md  04-transformer-long-context.md  interview-answer-templates.md  learning-roadmap.md  mvp-architecture.md
site/: index.html  main.js  manifest.webmanifest  styles.css  sw.js
src/agent_memory/: __init__.py  manager.py  schema.py
src/interview_lab/: __init__.py  agent.py  cli.py  embeddings.py  llm.py  memory.py  models.py  rag.py  vector_store.py
src/long_context/: __init__.py  analysis.py
src/rag_pipeline/: __init__.py  chunking.py  ingestion.py  retrieval.py  schema.py
tests/: test_chunking.py  test_interview_lab_mvp.py  test_long_context.py
