[project]
name = "llm-agent-interview-lab"
version = "0.1.0"
description = "A study knowledge base and code scaffold for LLM Agent interview topics."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
interview-lab = "interview_lab.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
